# rag

./: MedArXiv-AgentRAG_plan.md
experiments/multi_agent/: .gitignore  PIPELINE_REPORT.html  PIPELINE_REPORT.md  README.md  RUNBOOK.md  pyproject.toml
experiments/multi_agent/data/indexes/: statutes_sparse.json
experiments/multi_agent/evals/querysets/: synthetic_seed_v1.yaml
experiments/multi_agent/indexes/: cases_smoke.jsonl  cases_smoke2.jsonl  ma_statutes_smoke_sparse.json
experiments/multi_agent/memory_store_chat/: MEMORY.md  _index.json
experiments/multi_agent/multi_agent/: errors.py  runner.py
experiments/multi_agent/multi_agent/agents/: base.py  lawyer.py  receptionist.py  secretary.py  stub_echo.py  supervisor.py
experiments/multi_agent/multi_agent/eval/: ablation_runner.py  ablations.py  comparator.py  latency.py  metrics.py  pricing.py  queryset.py  report.py  runner.py
experiments/multi_agent/multi_agent/memory/: compaction.py  store.py
experiments/multi_agent/multi_agent/orchestration/: supervised.py
experiments/multi_agent/multi_agent/providers/: anthropic.py  base.py  json_robust.py  openai_compatible.py  profile.py  stub.py
experiments/multi_agent/multi_agent/schemas/: case.py  contract_review.py  doc_generation.py  doc_interpret.py  document.py  state.py  (+8 more)
experiments/multi_agent/scripts/: benchmark.py  build_cases_index.py  build_statutes_index.py  chat-ready.sh  chat.py  extract_case_citations.py  profile_run.py  render_report_html.py  run_comparison.py  run_eval.py  serve_qwen_vllm.sh  test_deepseek.py  trace_viewer.py
experiments/multi_agent/tests/: conftest.py
(+183 files in other folders)
