[project]
name = "multi-agent-legal-rag"
version = "0.1.0"
description = "Experimental multi-agent legal RAG (Phase 1: walking skeleton)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "python-ulid>=2.0",
    "aiosqlite>=0.19",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.0",
    "jieba>=0.42",
    "numpy>=1.26",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["multi_agent*"]

[tool.setuptools.package-data]
multi_agent = ["prompts/lawyer/*.md", "prompts/receptionist/*.md"]
